# codecrafters-redis-c

./: .gitignore  CMakeLists.txt  README.md  your_program.sh
.codecrafters/: run.sh
include/: address_info.h  address_lookup.h  pch.h  sockets.h
src/: address_info.c  address_lookup.c  main.c  sockets.c
tests/e2e/: run_all_e2e_tests.sh  test_client_connection.exp  test_client_ping_gets_pong.exp
tests/unit/: CMakeLists.txt  main.c
tests/unit/include/: address_info_tests.h  address_lookup_tests.h  pch.h  sockets_tests.h  test_pch.h
